--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
+
 <html lang="ru">
-<head>
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>чет</title>
-</head>
-<body>
-	<div class="container">
-		<header class="page-header">
-			<p> Enshtote production</p>
-		</header>
-		<section class="main-image">
-			<h1 class="heading">Gdeee  Babkiiiii</h1>
-		</section>
-		<img class="main-image" src="img/pyatka.jpg" width="400">
-	</div>
-</body>
+	<head>
+		<link rel="stylesheet" href="style.css">
+		<meta charset="utf-8">
+		<base Target="_blank">
+	</head>
+	
+	<body>
+		
+		<main>
+			<div>
+				<h1>HAPPY BIRTHDAY, BITCH!!!</h1>
+				<img src="img/resp.jpg">
+			</div>
+		</main>
+		
+		<footer>
+			<p class="">Enstote production</p>
+		</footer>
+	</body>
 </html>
